--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
-  <div class="navbar-left">
-    <span class="navbar-logo">🏆</span>
+  <div class="navbar-left" routerLink="/games">
+    <img ngSrc="assets/icons/trophyquest-icon-32.png" class="navbar-logo" width="32" height="32" alt=""/>
     <span class="navbar-title">TrophyQuest</span>
   </div>
 
