--- a/src/app/layout/navbar/navbar.scss
+++ b/src/app/layout/navbar/navbar.scss
@@ -12,6 +12,7 @@
   }
 
   .navbar-left {
+    cursor: pointer;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -40,7 +41,6 @@
     }
   }
 }
-
 
 
 
