Added pagination and search result

--- a/src/app/features/games/games.component.scss
+++ b/src/app/features/games/games.component.scss
@@ -1,6 +1,6 @@
 .game-card-enter {
   animation-name: game-card-enter;
-  animation-duration: 250ms;
+  animation-duration: 500ms;
   animation-timing-function: ease-out;
   animation-fill-mode: both;
 }
@@ -16,20 +16,39 @@
   }
 }
 
+.game-page {
+  max-height: 80vh;
+  overflow-y: auto;
+}
+
 .game-card {
   cursor: pointer;
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
+  transition: transform 0.25s ease, box-shadow 0.15s ease;
+
+  .game-name {
+    font-size: 18px;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+  }
+
+  .game-platforms {
+    color: #02365a;
+  }
+
+  .game-card-image {
+    width: 100%;
+    max-height: 350px;
+    object-fit: cover;
+    display: block;
+  }
+
+  &:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  }
 }
 
-.game-card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-}
-
-.game-card-image {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  display: block;
-}
 
