--- a/src/app/features/games/games.component.html
+++ b/src/app/features/games/games.component.html
@@ -1,34 +1,40 @@
-<div class="game-page container">
-  <h1 class="text-center">List of games</h1>
+<div (scroll)="onScroll($event)" class="game-page">
+  <div class="container">
+    <h1 class="text-center">List of games</h1>
 
-  @switch (this.store.gamesLoadingStatus()) {
-    @case (LoadingStatus.LOADING) {
-      <p>Loading games...</p>
-    }
-    @case (LoadingStatus.SUCCESS) {
-      <h2>{{ this.store.games().length }} games found</h2>
+    @if (gameStore.list().length > 0) {
+      <h2>{{ this.gameStore.totalElements() }} games found</h2>
 
       <div class="row g-3">
-        @for (game of this.store.games(); track game.id; let i = $index) {
-          <div class="col-12 col-sm-6 col-md-4 col-lg-3 game-card-wrapper">
+        @for (game of this.gameStore.list(); track game.gameId; let i = $index) {
+          <div class="col-12 col-sm-12 col-md-4 col-lg-3 game-card-wrapper">
             <mat-card
               [style.animationDelay.ms]="80 * i" animate.enter="game-card-enter" class="game-card h-100">
-              <mat-card-header class="h-25">
-                <mat-card-title>{{ game.title }}</mat-card-title>
-                <mat-card-subtitle>{{ game.platform }}</mat-card-subtitle>
+              <mat-card-header>
+                <mat-card-title [title]="game.gameName" class="game-name">{{ game.gameName }}</mat-card-title>
+                <mat-card-subtitle class="game-platforms">{{ getGamePlatforms(game) }}</mat-card-subtitle>
               </mat-card-header>
-              <img alt="{{game.title}}" class="game-card-image" mat-card-image src="{{ game.imageUrl }}">
+              <img alt="{{game.gameName}}" class="game-card-image" mat-card-image src="{{ game.imageUrl }}">
             </mat-card>
           </div>
         }
       </div>
     }
-    @case (LoadingStatus.ERROR) {
-      <p>An error has occurred when fetching game list !</p>
-    }
-    @default {
-      <p>!!</p>
-    }
-  }
 
+    @if (this.gameStore.loadingStatus() === LoadingStatus.SUCCESS && this.gameStore.totalElements() === 0) {
+      <p>There is no game in database...</p>
+    }
+
+    @switch (this.gameStore.loadingStatus()) {
+      @case (LoadingStatus.LOADING) {
+        <p>Loading games...</p>
+      }
+      @case (LoadingStatus.ERROR) {
+        <p>An error has occurred when fetching game list !</p>
+      }
+      @default {
+      }
+    }
+
+  </div>
 </div>
