--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,8 +47,28 @@ body {
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
 
+
+/** GLOBAL STYLES FOR ANGULAR MATERIAL **/
 .game-card {
   .mat-mdc-card-header-text {
     min-width: 0;
   }
 }
+
+.game-list {
+  .panel-even {
+    background-color: #e9f3ff;
+  }
+
+  .panel-odd {
+    background-color: #f2f5f6; // blanc cassé
+  }
+
+  .game-list-element {
+    .mat-expansion-indicator {
+      visibility: hidden;
+    }
+
+  }
+}
+
