Added user store and service to retrieve user games

--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -47,6 +47,17 @@
       }
     }
   }
+
+  .navbar-user {
+    .user-profile-avatar {
+      border-radius: 5px;
+      border: 1px solid #000;
+    }
+
+    .user-profile-name {
+      padding-left: 10px;
+    }
+  }
 }
 
 
