--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,7 @@ body {
   }
 
   .panel-odd {
-    background-color: #f2f5f6; // blanc cassé
+    background-color: #ffffff;
   }
 
   .game-list-element {
