--- a/src/app/features/games/game-list/game-list.html
+++ b/src/app/features/games/game-list/game-list.html
@@ -1,17 +1,20 @@
 <mat-accordion [multi]="true" class="game-list">
-  @for (game of gameList; track game.gameId; let i = $index) {
+  @for (game of gameList; track game.id; let i = $index) {
     <mat-expansion-panel [ngClass]="i % 2 === 0 ? 'panel-even' : 'panel-odd'"
                          class="game-list-element">
       <mat-expansion-panel-header>
-        <mat-panel-title [title]="game.gameName" class="game-title">
-          <img [alt]="game.gameName" [src]="game.imageUrl" class="game-cover"/>
-          <span class="game-name">{{ game.gameName }}</span>
+        <mat-panel-title [title]="game.title" class="game-title">
+          <img [alt]="game.title" [src]="game.imageUrl" class="game-cover"/>
+          <span class="game-name">{{ game.title }}</span>
         </mat-panel-title>
+        <mat-panel-description class="game-platforms">
+          {{ game.platforms.join(', ') }}
+        </mat-panel-description>
       </mat-expansion-panel-header>
 
       <div class="game-details">
         <div class="game-meta">
-          <p><strong>Plateformes :</strong> PS4, PS5</p>
+          <p><strong>Plateformes :</strong> {{ game.platforms.join(', ') }}</p>
         </div>
       </div>
     </mat-expansion-panel>
