--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-left" routerLink="/games">
-    <img ngSrc="assets/icons/trophyquest-icon-32.png" class="navbar-logo" width="32" height="32" alt=""/>
+    <img alt="" class="navbar-logo" height="32" ngSrc="assets/icons/trophyquest-icon-32.png" width="32"/>
     <span class="navbar-title">TrophyQuest</span>
   </div>
 
@@ -8,4 +8,9 @@
     <li><a routerLink="/games" routerLinkActive="active">Jeux</a></li>
     <li><a routerLink="/trophies" routerLinkActive="active">Trophées</a></li>
   </ul>
+
+  <div class="navbar-user">
+    <img alt="" class="user-profile-avatar" height="32" ngSrc="{{ userStore.selected()?.avatarUrl }}" width="32"/>
+    <span class="user-profile-name">{{ userStore.selected()?.profileName }}</span>
+  </div>
 </nav>
