--- a/src/app/features/user-list-page/user-list-page.scss
+++ b/src/app/features/user-list-page/user-list-page.scss
@@ -1,9 +1,30 @@
+.user-card-enter {
+  animation-name: user-card-enter;
+  animation-duration: 500ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
 
-.game-card {
+@keyframes user-card-enter {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.user-card-wrapper {
+  padding-top: 20px;
+}
+
+.user-card {
   cursor: pointer;
   transition: transform 0.25s ease, box-shadow 0.15s ease;
 
-  .game-name {
+  .user-name {
     font-size: 18px;
     display: block;
     white-space: nowrap;
@@ -12,11 +33,11 @@
     max-width: 100%;
   }
 
-  .game-platforms {
+  .user-platforms {
     color: #02365a;
   }
 
-  .game-card-image {
+  .user-card-image {
     width: 100%;
     max-height: 350px;
     object-fit: cover;
