--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,3 +1,5 @@
+@use 'styles/colors' as *;
+
 :host {
   position: sticky;
   top: 0;
@@ -10,7 +12,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1.5rem;
-  background: #02365a;
+  background: $blue-main;
   color: #fff;
   border-bottom: 1px solid #2a2a2a;
 
@@ -49,6 +51,8 @@
   }
 
   .navbar-user {
+    cursor: pointer;
+
     .user-profile-avatar {
       border-radius: 5px;
       border: 1px solid #000;
