Added profile game list with trophies

--- a/src/app/features/profile-page/profile-page.html
+++ b/src/app/features/profile-page/profile-page.html
@@ -1,3 +1,18 @@
 <div class="profile-page container">
-  <app-profile-summary [profile]="profileStore.user()" [trophyCount]="profileStore.trophyCount()"></app-profile-summary>
+  <app-profile-summary
+    [profile]="profileStore.user()"
+    [style.animationDelay.ms]="100"
+    [trophyCount]="profileStore.trophyCount()"
+    animate.enter="profile-block-enter"/>
+  <div class="profile-collection-wrapper row">
+    <app-profile-game-list
+      [gameList]="profileStore.gameList()"
+      [style.animationDelay.ms]="200"
+      animate.enter="profile-block-enter"
+      class="w-75"/>
+    <app-profile-trophy-list
+      [style.animationDelay.ms]="300"
+      animate.enter="profile-block-enter"
+      class="w-25"/>
+  </div>
 </div>
