--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,2 +1,7 @@
 $blue-main: #02365a;
-$blue-light: #d1dcff;
+$blue-medium: #185c8b;
+$blue-light: #d9e8f2;
+
+$green: #2bab3f;
+$green-medium: #36a854;
+$green-light: #ccefd6;
