--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ html {
       primary: mat.$azure-palette,
       tertiary: mat.$blue-palette,
     ),
-    typography: Roboto,
+    typography: Comic Sans MS,
     density: 0,
   ));
 }
@@ -41,7 +41,7 @@ html, body {
 
 body {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Comic Sans MS, "Helvetica Neue", sans-serif;
 }
 
 
