--- a/src/app/features/profile-page/profile-page.scss
+++ b/src/app/features/profile-page/profile-page.scss
@@ -19,4 +19,12 @@
 
 .profile-collection-wrapper {
   padding-top: 10px;
+
+  .profile-collection-games {
+    width: 60%;
+  }
+
+  .profile-collection-trophies {
+    width: 40%;
+  }
 }
