--- a/src/app/features/profile-trophy-list/profile-trophy-list.html
+++ b/src/app/features/profile-trophy-list/profile-trophy-list.html
@@ -1,1 +1,30 @@
-<p>Coming soon : latest trophies!</p>
+<div class="profile-trophy-list">
+  <h4>Derniers trophées obtenus</h4>
+
+  @for (trophy of trophyList; track trophy.id; let i = $index) {
+    <mat-card
+      [style.animationDelay.ms]="400 + i * 80"
+      animate.enter="trophy-element-enter"
+      class="profile-trophy-card"
+      role="listitem"
+    >
+      <mat-card-header>
+        <mat-card-title-group>
+          <mat-card-title [title]="trophy.trophyTitle" class="profile-trophy-title">
+            <img [alt]="trophy.trophyTitle" [height]="iconSize" [ngSrc]="trophy.iconUrl" [width]="iconSize"/>
+            {{ trophy.trophyTitle }}
+          </mat-card-title>
+          <mat-card-subtitle class="profile-trophy-description">
+            {{ trophy.trophyDescription }}
+          </mat-card-subtitle>
+
+          <img alt="" height="32" ngSrc="assets/icons/trophy_{{trophy.trophyType}}_128.png" width="32"/>
+        </mat-card-title-group>
+      </mat-card-header>
+
+      <mat-card-content>
+        Obtenu le : {{ trophy.earnedDate | date: 'dd/MM/yyyy' }}
+      </mat-card-content>
+    </mat-card>
+  }
+</div>
