Removed game-related components and routes, refactored user and profile components, and updated routing paths accordingly.

--- a/src/app/components/profile-game-list/profile-game-list.html
+++ b/src/app/components/profile-game-list/profile-game-list.html
@@ -29,28 +29,28 @@
               @if (game.earnedTrophies.platinum > 0) {
                 <div class="profile-game-trophy-count">
                   <img [height]="trophyIconSize" [width]="trophyIconSize" alt=""
-                       ngSrc="assets/icons/trophy_platinum_128.png"/>
+                       ngSrc="../../../assets/icons/trophy_platinum_128.png"/>
                   <span class="trophy-count">{{ game.earnedTrophies.platinum || '-' }}</span>
                 </div>
               }
               @if (game.earnedTrophies.gold > 0) {
                 <div class="profile-game-trophy-count">
                   <img [height]="trophyIconSize" [width]="trophyIconSize" alt=""
-                       ngSrc="assets/icons/trophy_gold_128.png"/>
+                       ngSrc="../../../assets/icons/trophy_gold_128.png"/>
                   <span class="trophy-count">{{ game.earnedTrophies.gold || '-' }}</span>
                 </div>
               }
               @if (game.earnedTrophies.silver > 0) {
                 <div class="profile-game-trophy-count">
                   <img [height]="trophyIconSize" [width]="trophyIconSize" alt=""
-                       ngSrc="assets/icons/trophy_silver_128.png"/>
+                       ngSrc="../../../assets/icons/trophy_silver_128.png"/>
                   <span class="trophy-count">{{ game.earnedTrophies.silver || '-' }}</span>
                 </div>
               }
               @if (game.earnedTrophies.bronze > 0) {
                 <div class="profile-game-trophy-count">
                   <img [height]="trophyIconSize" [width]="trophyIconSize" alt=""
-                       ngSrc="assets/icons/trophy_bronze_128.png"/>
+                       ngSrc="../../../assets/icons/trophy_bronze_128.png"/>
                   <span class="trophy-count">{{ game.earnedTrophies.bronze || '-' }}</span>
                 </div>
               }
