--- a/src/app/components/profile-summary/profile-summary.html
+++ b/src/app/components/profile-summary/profile-summary.html
@@ -16,22 +16,22 @@
 
     <div class="trophy-summary-content">
       <div class="trophy-item">
-        <img alt="Trophées platine" height="64" ngSrc="assets/icons/trophy_platinum_128.png" width="64"/>
+        <img alt="Trophées platine" height="64" ngSrc="../../../assets/icons/trophy_platinum_128.png" width="64"/>
         <span class="trophy-count">{{ trophyCount.platinum || '-' }}</span>
       </div>
 
       <div class="trophy-item">
-        <img alt="Trophées or" height="64" ngSrc="assets/icons/trophy_gold_128.png" width="64"/>
+        <img alt="Trophées or" height="64" ngSrc="../../../assets/icons/trophy_gold_128.png" width="64"/>
         <span class="trophy-count">{{ trophyCount.gold || '-' }}</span>
       </div>
 
       <div class="trophy-item">
-        <img alt="Trophées argent" height="64" ngSrc="assets/icons/trophy_silver_128.png" width="64"/>
+        <img alt="Trophées argent" height="64" ngSrc="../../../assets/icons/trophy_silver_128.png" width="64"/>
         <span class="trophy-count">{{ trophyCount.silver || '-' }}</span>
       </div>
 
       <div class="trophy-item">
-        <img alt="Trophées bronze" height="64" ngSrc="assets/icons/trophy_bronze_128.png" width="64"/>
+        <img alt="Trophées bronze" height="64" ngSrc="../../../assets/icons/trophy_bronze_128.png" width="64"/>
         <span class="trophy-count">{{ trophyCount.bronze || '-' }}</span>
       </div>
     </div>
