--- a/src/app/pages/profile-page/profile-page.html
+++ b/src/app/pages/profile-page/profile-page.html
@@ -7,6 +7,7 @@
 
   <div class="profile-collection-wrapper row">
     <app-profile-game-list
+      (gameClicked)="navigateToGamePage($event)"
       [gameList]="profileStore.gameList()"
       [style.animationDelay.ms]="200"
       animate.enter="profile-block-enter"
