--- a/src/app/components/profile-game-list/profile-game-list.scss
+++ b/src/app/components/profile-game-list/profile-game-list.scss
@@ -64,11 +64,11 @@
     .profile-game-image-wrapper {
       margin-right: 0.75rem;
       flex-shrink: 0;
-    }
 
-    .profile-game-image-wrapper img {
-      border-radius: 4px;
-      display: block;
+      img {
+        border-radius: 4px;
+        display: block;
+      }
     }
 
     .profile-game-content {
@@ -80,25 +80,12 @@
         display: flex;
         align-items: center;
       }
-
-      .trophy-count {
-        font-weight: 600;
-      }
     }
 
     .profile-game-title {
       font-size: 1.25rem;
       font-weight: 600;
       margin-bottom: 0.25rem;
-    }
-
-    .chevron {
-      display: inline-block;
-      transition: transform 0.2s ease;
-
-      &.open {
-        transform: rotate(180deg);
-      }
     }
 
     .profile-game-details {
@@ -113,11 +100,37 @@
         margin-top: 0.5rem;
       }
 
-      .profile-game-details-content {
+      .profile-game-collection {
+        margin: 0.5rem;
         padding: 0.5rem;
-        background-color: rgba($blue-medium, 0.05);
         border-radius: 0.5rem;
+        background-color: $blue-light;
         color: $blue-main;
+        display: flex;
+        justify-content: left;
+        align-content: center;
+        cursor: pointer;
+
+        .collection-image {
+          width: 64px;
+        }
+
+        .collection-title-wrapper {
+          width: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          padding-left: 10px;
+
+          .collection-platform {
+            font-family: 'Verdana', monospace;
+            font-size: 0.8rem;
+            background-color: white;
+            border: 1px solid black;
+            border-radius: 5px;
+            padding: 0 4px;
+          }
+        }
       }
     }
   }
