Added trophies in user game page

--- a/src/app/components/profile-trophy-list/profile-trophy-list.html
+++ b/src/app/components/profile-trophy-list/profile-trophy-list.html
@@ -19,7 +19,7 @@
           </mat-card-subtitle>
 
           <img [height]="trophyTypeSize" [width]="trophyTypeSize" alt=""
-               ngSrc="assets/icons/trophy_{{trophy.trophyType}}_128.png"/>
+               ngSrc="assets/icons/trophy-{{trophy.trophyType}}.png"/>
         </mat-card-title-group>
       </mat-card-header>
 
