--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,6 +2,11 @@ $blue-main: #02365a;
 $blue-medium: #185c8b;
 $blue-light: #d9e8f2;
 
-$green: #2bab3f;
+$green-main: #2bab3f;
 $green-medium: #36a854;
 $green-light: #ccefd6;
+
+$platinum: #2799f6;
+$gold: #f0c419;
+$silver: #c0c0c0;
+$bronze: #b87333;
