--- a/src/app/components/trophy-count-displayer/trophy-count-displayer.html
+++ b/src/app/components/trophy-count-displayer/trophy-count-displayer.html
@@ -1,32 +1,32 @@
 <div class="trophy-count-displayer">
   @if (trophyCount.platinum > 0) {
-    <div [style.flex-direction]="computeFlexDirection()" class="trophy-item platinum-trophy">
-      <img [height]="iconSize" [width]="iconSize" alt="Trophées platine"
-           ngSrc="../../../assets/icons/trophy_platinum_128.png"/>
+    <div [style.flex-direction]="flexDirection" class="trophy-item platinum-trophy">
+      <img [height]="iconSize" [width]="iconSize" alt="Trophées platines"
+           ngSrc="assets/icons/trophy-platinum.png"/>
       <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.platinum || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.gold > 0) {
-    <div [style.flex-direction]="computeFlexDirection()" class="trophy-item gold-trophy">
+    <div [style.flex-direction]="flexDirection" class="trophy-item gold-trophy">
       <img [height]="iconSize" [width]="iconSize" alt="Trophées or"
-           ngSrc="../../../assets/icons/trophy_gold_128.png"/>
+           ngSrc="assets/icons/trophy-gold.png"/>
       <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.gold || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.silver > 0) {
-    <div [style.flex-direction]="computeFlexDirection()" class="trophy-item silver-trophy">
+    <div [style.flex-direction]="flexDirection" class="trophy-item silver-trophy">
       <img [height]="iconSize" [width]="iconSize" alt="Trophées argent"
-           ngSrc="../../../assets/icons/trophy_silver_128.png"/>
+           ngSrc="assets/icons/trophy-silver.png"/>
       <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.silver || '-' }}</span>
     </div>
   }
 
   @if (trophyCount.bronze > 0) {
-    <div [style.flex-direction]="computeFlexDirection()" class="trophy-item bronze-trophy">
+    <div [style.flex-direction]="flexDirection" class="trophy-item bronze-trophy">
       <img [height]="iconSize" [width]="iconSize" alt="Trophées bronze"
-           ngSrc="../../../assets/icons/trophy_bronze_128.png"/>
+           ngSrc="assets/icons/trophy-bronze.png"/>
       <span [style.font-size]="textSizePx + 'px'" class="trophy-count">{{ trophyCount.bronze || '-' }}</span>
     </div>
   }
