--- a/src/app/pages/game-page/game-page.html
+++ b/src/app/pages/game-page/game-page.html
@@ -1,24 +1,35 @@
 <div class="container container-fluid">
-  <div class="trophy-list">
-    @for (trophy of gameStore.baseGameTrophies()?.trophies; track trophy.id; let i = $index) {
-      @if (i !== 0) {
-        <hr class="trophy-separator"/>
-      }
-      <app-trophy-card [style.animationDelay.ms]="200 + i * 80"
-                       [trophy]="trophy" animate.enter="trophy-element-enter"
-                       class="game-page-trophy-card"></app-trophy-card>
-    }
-    @for (groupTrophy of gameStore.dlcTrophies(); track groupTrophy.groupName) {
-      <h2>{{ groupTrophy.groupName }}</h2>
-      @for (trophy of groupTrophy.trophies; track trophy.id; let i = $index) {
+  <div [style.animationDelay.ms]="100" animate.enter="game-summary-enter" class="game-header">
+    <app-game-summary [game]="gameStore.game()"></app-game-summary>
+    <app-trophy-filters (showHiddenTrophies)="showHiddenTrophies($event)" (trophyEarnedFilterChanged)="changeTrophyEarnedType($event)"
+                        class="trophy-filters"></app-trophy-filters>
+  </div>
+
+  <div class="group-list">
+    @for (trophy of baseGameTrophies(); track trophy.id; let i = $index) {
+      <div class="trophy-list">
         @if (i !== 0) {
           <hr class="trophy-separator"/>
         }
-        <app-trophy-card
-          [style.animationDelay.ms]="200 + i * 80"
-          [trophy]="trophy" animate.enter="trophy-element-enter"
-          class="game-page-trophy-card"></app-trophy-card>
-      }
+        <app-trophy-card [showHiddenTrophies]="shouldShowHiddenTrophies"
+                         [style.animationDelay.ms]="200 + i * 80" [trophy]="trophy"
+                         animate.enter="trophy-element-enter"
+                         class="game-page-trophy-card"></app-trophy-card>
+      </div>
+    }
+    @for (groupTrophy of gameStore.dlcTrophies(); track groupTrophy.groupName) {
+      <div class="trophy-list">
+        <h2>{{ groupTrophy.groupName }}</h2>
+        @for (trophy of getFilteredTrophies(groupTrophy.trophies); track trophy.id; let i = $index) {
+          @if (i !== 0) {
+            <hr class="trophy-separator"/>
+          }
+          <app-trophy-card
+            [style.animationDelay.ms]="200 + i * 80"
+            [trophy]="trophy" animate.enter="trophy-element-enter"
+            class="game-page-trophy-card"></app-trophy-card>
+        }
+      </div>
     }
   </div>
 </div>
