--- a/src/app/pages/game-page/game-page.scss
+++ b/src/app/pages/game-page/game-page.scss
@@ -1,3 +1,35 @@
+.game-header {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.trophy-filters {
+  width: 100%;
+}
+
+.game-summary-enter {
+  animation-name: game-summary-enter;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+@keyframes game-summary-enter {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
 .trophy-element-enter {
   animation-name: trophy-element-enter;
   animation-duration: 500ms;
@@ -16,6 +48,18 @@
   }
 }
 
+.trophy-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-page-trophy-card {
+  width: 100%;
+}
+
 .trophy-separator {
   color: rgba(0, 0, 0, 0.54);
+  margin: 5px;
+  width: 95%;
 }
