--- a/src/app/pages/game-page/game-page.html
+++ b/src/app/pages/game-page/game-page.html
@@ -1,8 +1,9 @@
-<div class="container container-fluid">
+<div class="game-page container container-fluid">
   <div [style.animationDelay.ms]="100" animate.enter="game-summary-enter" class="game-header">
     <app-game-summary [game]="gameStore.game()"></app-game-summary>
     <app-trophy-filters (showHiddenTrophies)="showHiddenTrophies($event)"
                         (trophyEarnedFilterChanged)="changeTrophyEarnedType($event)"
+                        [initEarnedFilter]="gameStore.earnedFilter()"
                         class="trophy-filters"></app-trophy-filters>
   </div>
 
@@ -18,17 +19,16 @@
                          class="game-page-trophy-card"></app-trophy-card>
       </div>
     }
-    @for (groupTrophy of gameStore.dlcTrophies(); track groupTrophy.groupName) {
+    @for (groupTrophy of gameStore.dlcTrophies(); track groupTrophy.groupName; let j = $index) {
       <div class="trophy-list">
-        <h2>{{ groupTrophy.groupName }}</h2>
+        <h2 class="game-group-name">DLC Trophy Pack {{ j + 1 }}</h2>
         @for (trophy of groupTrophy.trophies; track trophy.id; let i = $index) {
           @if (i !== 0) {
             <hr class="trophy-separator"/>
           }
-          <app-trophy-card
-            [style.animationDelay.ms]="200 + i * 80"
-            [trophy]="trophy" animate.enter="trophy-element-enter"
-            class="game-page-trophy-card"></app-trophy-card>
+          <app-trophy-card [style.animationDelay.ms]="200 + i * 80"
+                           [trophy]="trophy" animate.enter="trophy-element-enter"
+                           class="game-page-trophy-card"></app-trophy-card>
         }
       </div>
     }
