--- a/src/app/pages/game-page/game-page.scss
+++ b/src/app/pages/game-page/game-page.scss
@@ -1,3 +1,8 @@
+.game-page {
+  padding-top: 20px;
+  padding-bottom: 50px;
+}
+
 .game-header {
   height: 500px;
   display: flex;
@@ -46,6 +51,12 @@
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.game-group-name {
+  margin-top: 30px;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .trophy-list {
