--- a/src/app/components/trophy-filters/trophy-filters.html
+++ b/src/app/components/trophy-filters/trophy-filters.html
@@ -1,14 +1,14 @@
 <div class="trophy-filters">
   <div class="trophy-filter">
-    <mat-slide-toggle (toggleChange)="hiddenFilterChanges()"></mat-slide-toggle>
+    <mat-slide-toggle (toggleChange)="hiddenFilterChanges()" class="hidden-trophy-toggler"></mat-slide-toggle>
     <span class="trophy-filter-label">Show hidden trophies</span>
   </div>
 
   <div class="trophy-filter">
     <mat-radio-group (change)="earnedFilterChanges()" [(ngModel)]="wantedTrophyEarnedType">
-      <mat-radio-button value="all">All</mat-radio-button>
-      <mat-radio-button value="earned">Earned</mat-radio-button>
-      <mat-radio-button value="unearned">Not earned</mat-radio-button>
+      <mat-radio-button class="all-trophy-button" value="all">All</mat-radio-button>
+      <mat-radio-button class="earned-trophy-button" value="earned">Earned</mat-radio-button>
+      <mat-radio-button class="unearned-trophy-button" value="unearned">Not earned</mat-radio-button>
     </mat-radio-group>
     <span class="trophy-filter-label">Select trophy earned type</span>
   </div>
