Added home page and refactored profile page

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-  <div class="navbar-left" routerLink="/users">
+  <div class="navbar-left" routerLink="/home">
     <img alt="" class="navbar-logo" height="32" ngSrc="../../../assets/icons/trophyquest-icon-32.png" width="32"/>
     <span class="navbar-title">TrophyQuest</span>
   </div>
