--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,23 @@ body {
   }
 }
 
+/**
+ * ANIMATIONS
+ */
+.block-enter {
+  animation-name: block-enter;
+  animation-duration: 500ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+@keyframes block-enter {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
